--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,9 +10,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
-    #   - name: Install dependencies
-    #     run: go get .
-    #   - name: Build
-    #     run: go build -v ./...
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
       - name: Test with the Go CLI
         run: go test
