--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,14 +9,13 @@ jobs:
           shell: bash
           working-directory: "${{ github.workspace }}"
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.22'
-      - name: Install dependencies
-        run: go get .
-      - name: Build
-        run: go build -v ./...
-      - name: Test with the Go CLI
-        run: go test -v ./...
+    - uses: actions/setup-go@v4
+      name: setup
+      with:
+        go-version: '1.22'
+    - uses: actions/checkout@v4
+      name: checkout
+    - name: debug
+      run: pwd && ls
+    - name: test
+      run: go test -v .
