--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,11 +5,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v4
-      name: setup
+
+    - name: setup
+      uses: actions/setup-go@v4
       with:
         go-version: '1.22'
-    - uses: actions/checkout@v4
-      name: checkout
+
+    - name: checkout
+      uses: actions/checkout@v4
+
     - name: test
       run: go test
+
+    # - name: Go Release Binary
+    #   uses: github.com/ngs/go-release.action@v1.0.2
+    #   env:
+    #     CMD_PATH: cmd/gorph
