--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
           go-version: '1.22.0'
       - name: Build
         run: |
-          go build cmd/gorph
+          go build ./cmd/gorph
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
